fix: team member alignment

--- a/web/src/components/Common/TeamMember/TeamMember.module.scss
+++ b/web/src/components/Common/TeamMember/TeamMember.module.scss
@@ -10,6 +10,7 @@
   align-items: center;
   transition: $easing-standard 0.2s;
   cursor: pointer;
+  text-align: left;
 
   &:hover {
     transform: scale(1.01);
